[gd_scene load_steps=12 format=3 uid="uid://bbctegcfntwoe"]

[ext_resource type="Script" path="res://Scripts/pause.gd" id="1_03lrq"]
[ext_resource type="Texture2D" uid="uid://dr713eli87kg0" path="res://Arts/KeyboardControls/EscapeKeyboard-removebg-preview.png" id="1_t2voc"]
[ext_resource type="Texture2D" uid="uid://ci3ltgm0c8j2r" path="res://Arts/ControllerControls/ShareController-removebg-preview.png" id="2_g1xuu"]
[ext_resource type="Texture2D" uid="uid://dd5gsplolw7pp" path="res://Arts/ControllerControls/ShareXbox-removebg-preview.png" id="3_xjpr8"]
[ext_resource type="Texture2D" uid="uid://c6p5gufsd8e34" path="res://Arts/ControllerControls/-SwitchController-removebg-preview.png" id="4_6cx23"]
[ext_resource type="Texture2D" uid="uid://doposqf4xd8cw" path="res://Arts/KeyboardControls/Tabkey-removebg-preview.png" id="5_d1asp"]
[ext_resource type="Texture2D" uid="uid://doifl1w5xb306" path="res://Arts/KeyboardControls/Circumflexkey-removebg-preview.png" id="6_3gj4a"]
[ext_resource type="Texture2D" uid="uid://c83bhjcbi4555" path="res://Arts/ControllerControls/SelectController-removebg-preview.png" id="7_he205"]
[ext_resource type="Texture2D" uid="uid://chi8fx5di1r7n" path="res://Arts/ControllerControls/Menu-removebg-preview.png" id="8_rgm4r"]
[ext_resource type="Texture2D" uid="uid://bwv5alhg5rklv" path="res://Arts/ControllerControls/Switch+-removebg-preview.png" id="9_set0a"]
[ext_resource type="PackedScene" uid="uid://cp0mu2e8kcon" path="res://Scenes/commands_ui.tscn" id="10_3eqxx"]

[node name="Pause" type="Control"]
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_03lrq")

[node name="ReturnLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="ReturnLayer"]
offset_left = 1380.0
offset_top = 257.0
offset_right = 1420.0
offset_bottom = 304.0
scale = Vector2(12.1928, 7.48612)
color = Color(0.0923971, 0.0923971, 0.092397, 1)

[node name="ReturnToMenu" type="Button" parent="ReturnLayer" groups=["pause_buttons"]]
offset_left = 1379.0
offset_top = 254.0
offset_right = 1692.0
offset_bottom = 317.0
scale = Vector2(1.56, 1.72)
theme_override_font_sizes/font_size = 40
text = "Return to menu"

[node name="Sprite2D" type="Sprite2D" parent="ReturnLayer/ReturnToMenu"]
position = Vector2(144.872, 100.581)
scale = Vector2(0.123545, 0.123736)
texture = ExtResource("1_t2voc")

[node name="Sprite2D2" type="Sprite2D" parent="ReturnLayer/ReturnToMenu"]
position = Vector2(62.8205, 174.419)
scale = Vector2(0.529769, 0.438829)
texture = ExtResource("2_g1xuu")

[node name="Sprite2D" type="Sprite2D" parent="ReturnLayer/ReturnToMenu/Sprite2D2"]
position = Vector2(156.002, -0.407177)
texture = ExtResource("3_xjpr8")

[node name="Sprite2D2" type="Sprite2D" parent="ReturnLayer/ReturnToMenu/Sprite2D2"]
position = Vector2(303.514, 2.62105)
texture = ExtResource("4_6cx23")

[node name="ContinueLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="ContinueLayer"]
offset_left = 1383.0
offset_top = 701.0
offset_right = 1423.0
offset_bottom = 741.0
scale = Vector2(12.1928, 7.48612)
color = Color(0.0923971, 0.0923971, 0.092397, 1)

[node name="Continue" type="Button" parent="ContinueLayer" groups=["pause_buttons"]]
offset_left = 1464.0
offset_top = 702.0
offset_right = 1648.0
offset_bottom = 765.0
scale = Vector2(1.56, 1.72)
theme_override_font_sizes/font_size = 40
text = "Continue"

[node name="Sprite2D" type="Sprite2D" parent="ContinueLayer/Continue"]
position = Vector2(46.1538, 86.0465)
scale = Vector2(0.26355, 0.277828)
texture = ExtResource("5_d1asp")

[node name="Sprite2D" type="Sprite2D" parent="ContinueLayer/Continue/Sprite2D"]
position = Vector2(412.936, -2.17391)
scale = Vector2(0.81588, 0.81726)
texture = ExtResource("6_3gj4a")

[node name="Sprite2D2" type="Sprite2D" parent="ContinueLayer/Continue"]
position = Vector2(30.7693, 148.837)
scale = Vector2(0.454515, 0.432836)
texture = ExtResource("7_he205")

[node name="Sprite2D" type="Sprite2D" parent="ContinueLayer/Continue/Sprite2D2"]
position = Vector2(145.18, 4.16473)
scale = Vector2(0.466761, 0.50914)
texture = ExtResource("8_rgm4r")

[node name="Sprite2D2" type="Sprite2D" parent="ContinueLayer/Continue/Sprite2D2"]
position = Vector2(273.346, 4.16475)
texture = ExtResource("9_set0a")

[node name="Label" type="Label" parent="."]
z_index = 5
layout_mode = 0
offset_left = 681.0
offset_top = 50.0
offset_right = 837.0
offset_bottom = 119.0
scale = Vector2(3.58679, 3.28)
theme_override_colors/font_color = Color(0.725349, 0, 0.0495564, 1)
theme_override_font_sizes/font_size = 50
text = "PAUSE"

[node name="ColorRect" type="ColorRect" parent="Label"]
z_index = -1
layout_mode = 0
offset_left = -20.2212
offset_top = -7.26744
offset_right = -13.2212
offset_bottom = 0.732559
scale = Vector2(28.6963, 10.8095)
color = Color(0.219501, 0.219501, 0.219501, 1)

[node name="CommandsUI" parent="." instance=ExtResource("10_3eqxx")]
offset_top = 381.0
offset_right = 1200.0
offset_bottom = 1101.0
scale = Vector2(1.08, 1.8)

[connection signal="pressed" from="ReturnLayer/ReturnToMenu" to="." method="_on_return_to_menu_pressed"]
[connection signal="pressed" from="ContinueLayer/Continue" to="." method="_on_continue_pressed"]
